--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,12 +27,13 @@
 div.row { 
     margin-top: 16px;
   }
+
 button{
     background-color:  #81cdff;
     border-color:  #81cdff;
     color:white;
-    padding: 1px 10px;
-    border-radius:1050%;
+    padding: 4px 10px;
+    border-radius: 8px;
     border-color:transparent;
     font-size:x-small;
 }
@@ -48,7 +49,7 @@ button{
 }
 
 
-.item_calendario{ 
+.rectangulo_azul{ 
     background-color: #81cdff;
     border: solid 1px #282c34;
     color: white;
@@ -57,6 +58,7 @@ button{
     margin: auto;
     margin-bottom: 1rem;
     margin-top: 1rem;
+    border-radius: 8px;
 }
 
 /* ========================== Header.js =============================== */
@@ -120,13 +122,14 @@ button{
     margin: auto;
     margin-bottom: 1rem;
     margin-top: 2rem;
+    border-radius: 8px;
 }
 
 
 
 /* ========================== Semestre.js =============================== */
 
-.semestre-form{
+.generic-form{
     display: auto;
     text-align: center;
     justify-content: center;
