--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -154,3 +154,16 @@ div.row {
     font-size: large;
     padding: 40px 10px ;
 }
+
+
+footer {
+    text-align: center;
+    padding: 10px;
+    margin-top: 100px;
+    background-color:#007BFF;
+    color: white;
+    position:fixed;
+    left:0;
+    bottom:0;
+    right:0;
+}
