--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,16 +28,16 @@ div.row {
 }
 
 
-.rectangulo_azul{
+.botones_hacia_abajo{
     display: block;
-    background-color: #81B2E8;
     color: white;
     padding: 15px 32px;
-    width: 20vw;
+    width: 25vw;
+    height: 3vw;
     margin: auto;
     margin-bottom: 1rem;
+    margin-left: 2rem;
     margin-top: 1rem;
-    border-radius: 8px;
     border-color: white;
 }
 
