--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -29,8 +29,8 @@ div.row {
 
 
 .botones_hacia_abajo{
+    background-color: #2B96F7;
     display: block;
-    color: white;
     padding: 15px 32px;
     width: 25vw;
     height: 3vw;
@@ -113,7 +113,7 @@ div.row {
 
 
 .titulo{ 
-    background-color: #858383;
+    background-color:#007BFF;
     border: solid 1px #ddd;
     color: white;
     padding: 15px 32px;
