[ADD] Pop Up de evaluaciones de un dia en el heatmap Primera version

--- a/frontend/src/heatmap/Calendar.css
+++ b/frontend/src/heatmap/Calendar.css
@@ -20,6 +20,14 @@
   text-align: center;
   background-color: #ccc;
 }
+.modal-backdrop
+{
+    opacity:0.0 !important;
+}
+.modal-header{
+  background-color: #007BFF;
+  color: white;
+}
 
 .year-selection {
   padding: 2em 0;
