[Modified] Cambio calendario y componentes para que sean mas responsive.[Add] Boton Guardar calendario

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,8 +32,8 @@ div.row {
     background-color: #2B96F7;
     display: block;
     padding: 15px 32px;
-    width: 25vw;
-    height: 3vw;
+    width: 17rem;
+    height: 2.3rem;
     margin: auto;
     margin-bottom: 1rem;
     margin-left: 2rem;
@@ -41,6 +41,10 @@ div.row {
     border-color: white;
 }
 
+.block-example {
+    border: 1px solid #ddd;
+    display: inline-block;
+}
 .rectangulo_azul_admin{
     display: block;
     background-color: #0E71DE;
