[Modified] Probando estilo de seleccionar profesores en editar curso

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,6 +16,9 @@
 div.row { 
     margin-top: 16px;
 }
+.custom-class{
+    color:yellow;
+}
 
 /* ========================== Home.js =============================== */
 
