--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,14 @@ div.row {
     color:yellow;
 }
 
+.select_profesores{
+    height: 50px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.select{
+    font-family: Arial, Helvetica, sans-serif;
+}
 /* ========================== Home.js =============================== */
 
 .centrar{
