--- a/frontend/src/heatmap/Calendar.css
+++ b/frontend/src/heatmap/Calendar.css
@@ -137,6 +137,9 @@ th{
   border: 2px solid #dddddd;
   position: sticky; top: 0;
 }
+.gris{
+  background-color: #ccc;
+}
 
 /*                            Leyenda                               */
 .leyenda{
