[Fix] Pop Ups Profesores crear y editar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,9 +16,6 @@
 div.row { 
     margin-top: 16px;
 }
-.custom-class{
-    color:yellow;
-}
 
 /* ========================== nuevo_curso.js =============================== */
 .select_profesores{
@@ -196,4 +193,9 @@ footer {
 .dropdown-menu {
     right: 0;
     left: auto;
+}
+
+.header-add{
+    background-color:#007BFF;
+    color:white;
 }
