--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -160,17 +160,19 @@ footer {
     width: 100%;
     height: 100%;
     overflow: auto;
+    opacity:0.5 !important;
 }
 .custom-modal-style {
     width: 1597px;
     height: 802px;
-    }
+    opacity:0.5 !important;
+}
+
   /* ========================== lista_evaluaciones.js =============================== */
 .dropdown-menu {
     right: 0;
     left: auto;
 }
-
 
   /* ========================== Modals =============================== */
 .header-add{
