--- a/frontend/src/heatmap/Calendar.css
+++ b/frontend/src/heatmap/Calendar.css
@@ -1,9 +1,3 @@
-
-.modal-backdrop
-{
-    opacity:0.0 !important;
-}
-
 .year-selection {
   padding: 2em 0;
 
@@ -158,7 +152,7 @@ th{
   width:4vh;
 }
 
-.modal{
+.modal_calendar{
   font-size:15px;
 }
 .td_leyenda{
