--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Django REST with React</title>
+  <title>U-Calendar</title>
 </head>
 <body>
 <div id="root">
