[CHG] Cambios en el about del proyecto

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -200,3 +200,8 @@ footer {
     display:inline-block;
     list-style: none;
 }
+.Equipo{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap:wrap;
+}
