--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,10 +38,11 @@ div.row {
 
 
 .botones_hacia_abajo{
-    background-color: #2B96F7;
+    font-size: x-large;
     display: block;
     padding: 15px 32px;
-    width: 17rem;
+    max-width: 60vh;
+    min-width: 45vh;
     height: 2.3rem;
     margin: auto;
     margin-bottom: 1rem;
