--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -99,8 +99,9 @@ div.row {
     position: -webkit-sticky;
     position: sticky;
     top: 0rem;
+    min-width: 300px;
     width: 400px;
-    height:400px;
+    /* height:400px; */
     margin: 0 auto;
     border: 1px solid #ddd;
     padding: 15px 32px;
