--- a/frontend/src/members.module.css
+++ b/frontend/src/members.module.css
@@ -4,10 +4,8 @@
     justify-content: space-around;
     background: #ACB2B1;
     align-items: center;
-    max-width: 100vh;
-    min-width: 40vh;
+    width: 15rem ;
     border: 3px solid #ddd;
-    border-radius: 4%;
     margin-left: 2px;
     margin-top: 6px;
     margin-bottom: 6px;
@@ -19,6 +17,7 @@
     padding-top: 4px;
     padding-bottom: 4px;
     color:white;
+
 }
 
 .image{
@@ -33,4 +32,14 @@
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 1px;
     margin-top: 1px;
+}
+
+.nombre{
+    font-weight:700;
+}
+
+.version{
+    color:white;
+    text-align:center;
+    height: 2rem ;
 }
